--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "save-dev": "0.0.1-security",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
