--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "gh-pages": "^4.0.0",
     "react": "^18.1.0",
+    "react-cookie": "^4.1.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
