--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "samadhan",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://master.d1rvwpbezmb1rs.amplifyapp.com",
-  "homepage": "https://master.d1rvwpbezmb1rs.amplifyapp.com/Samadhan-DiamondFrames/",
+  "homepage": "http://sportsgurugyani.com/",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
