--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/styled-engine-sc": "^5.8.0",
     "@mui/x-data-grid": "^5.12.1",
     "@mui/x-data-grid-pro": "^5.12.1",
+    "@syncfusion/ej2-react-dropdowns": "^20.2.36",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
