--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.27.2",
     "gh-pages": "^4.0.0",
     "react": "^18.1.0",
+    "react-aws-s3": "^1.5.0",
     "react-carousel-minimal": "^1.4.1",
     "react-cookie": "^4.1.1",
     "react-device-detect": "^2.2.2",
@@ -34,6 +35,7 @@
     "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
     "universal-cookie": "^4.0.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
