--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-aws-s3": "^1.5.0",
+    "react-aws-s3-typescript": "^1.1.3",
     "react-carousel-minimal": "^1.4.1",
     "react-cookie": "^4.1.1",
     "react-device-detect": "^2.2.2",
@@ -31,6 +32,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simple-image-slider": "^2.4.1",
+    "react-uuid": "^1.0.2",
     "save-dev": "0.0.1-security",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
