--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "crypto-js": "^4.1.1",
     "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-aws-s3": "^1.5.0",
