--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.29.2",
     "gh-pages": "^4.0.0",
+    "material-icons": "^1.11.11",
     "react": "^18.1.0",
     "react-aws-s3": "^1.5.0",
     "react-aws-s3-typescript": "^1.1.3",
