--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-dom": "^18.1.0",
     "react-prismazoom": "^3.0.3",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-simple-image-slider": "^2.4.1",
     "react-uuid": "^1.0.2",
     "save-dev": "0.0.1-security",
